	architecture.

	* phregs.c: new register renaming scheme designed to efficiently
		manage x86 flags ZF, PF, SF, OF, CF, DF. Each physical register
		attaches these flags, instead of making them occupy full
		additional registers.

2009-11-04
	* queues.c, phregs.c: default parameters did not make much sense. They
		have been changed to: RF=80, ROB=64, IQ=40, LQ=20, SQ=20.

2009-11-05
	* bpred.c: branch prediction redesigned and a new implementation made.
		The new design allows for multiple branch prediction. It has
		been documented in the m2s-doc project.

2009-11-06
	* decode.c: new pipeline stage that decouples instruction decode from
		instruction fetch.
	* fetch.c: processor front-end redesigned and reimplemented with
		a detailed documentation in the m2s-doc project.
		Fetch policies made code at fetch too complex. They are
		removed for the next version.

2009-11-23
	Version 2.2 Released

2009-11-24
	* uop.c: 'dep_map' updated. Dependence DDF was not present.
	* libstruct/debug.c: function 'dump_buf' implemented.

2009-12-02
	* libcachesystem/cache.c: new option to configure block replacement
		policy in the cache config file.
	* libmisc/misc.c: function 'map_string_case'
	* stat 'evicts' added to caches

2009-12-03
	* libstruct/config.c: bug fixed in function 'trim'. Tabs were not
		deleted at the beginning and end of strings.
	* libstruct/cachesystem.c: TLB section set as optional in cache
		configuration file.

2009-12-09
	* libm2skernel/elf.c: bug fixed. There was a segmentation fault
		when a non-existing executable file was tried to be
		loaded.

2009-12-17
	* tcache.c, processor.c: stats 'committed', 'squashed', 'accesses',
		'hits', and 'hitratio' for trace cache.
	* tcache.c: Change uop_max for trace_size.
		Function tcache_commit_trace changed to tcache_flush_trace.
		Stat 'tcache.trace_length' added, indicating the average trace
		length (depends on max branches and uops alignment).